# Senior-Design

./: .dockerignore  Dockerfile  README.md  entry.bash  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
backend/: .env.test  conftest.py  pytest.ini  sample.env  test_api_customers.py  test_authentication.py  test_customer_house_integration.py  test_house_image_logging_integration.py  test_integration.py  test_middleware.py  test_model_utils.py  test_services.py  test_utils.py  test_views.py
backend/backend/: settings.py
backend/core/: authentication.py  middleware.py  model_utils.py  models.py  readme.md  serializers.py  services.py  test_core.py  urls.py  utils.py  views.py
backend/core/migrations/: 0005_house_damage_types_house_roof_type_house_severity.py  0006_alter_customer_email_alter_customer_phone.py  0007_houseimage_detections_alter_house_address.py  0008_alter_customer_phone.py  0009_house_default_image.py  0009_house_price_estimate.py  0010_merge_20260222_1200.py
backend/core/tests/: test_core.py
inspections/: models.py  serializers.py  views.py
server/: urls.py
